--- a/public/index.css
+++ b/public/index.css
@@ -10,9 +10,41 @@ h1 {
   text-align: center;
   width: 100%;
   z-index: 1;
-  font-size: 5rem;
+  font-size: 4rem;
 }
 img {
   width: 100%;
   display: block;
+}
+h3 {
+  font-size: 2rem;
+  color: #540b0e;
+}
+a {
+  font-size: 2rem;
+  color: #540b0e;
+}
+
+@media screen and (max-width: 768px) {
+  h1 {
+    font-size: 2rem;
+  }
+  h3 {
+    font-size: 1rem;
+  }
+  a {
+    font-size: 1rem;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  h1 {
+    font-size: 2rem;
+  }
+  h3 {
+    font-size: 1rem;
+  }
+  a {
+    font-size: 1rem;
+  }
 }
